--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "browser-sync": "^2.23.6",
     "codelyzer": "^4.0.1",
+    "gulp": "^3.9.1",
+    "gulp-watch": "^5.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
