--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
+	"outDir": "./dist/out-tsc",
+	"allowJs": true,
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
