--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^3.0.6",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
+    "underscore": "^1.9.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
