Attempt to ignore event type icons

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # dependencies
 /node_modules
+/bower_components
 
 # IDEs and editors
 /.idea
@@ -42,4 +43,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-bower_components/*
+
+# Event type icons
+/src/assets/event-type-icons/*
